204-k3s-prod/manifests/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-proxy
              containerPort: 8191
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app: flaresolverr
spec:
  type: LoadBalancer
  selector:
    app: flaresolverr
  ports:
    - name: http-proxy
      port: 8191
      targetPort: http-proxy
      protocol: TCP
