204-k3s-prod/manifests/proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gluetun
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: gluetun
spec:
  replicas: 4
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.41.1
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - name: http-proxy
              containerPort: 8888
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun-proxy
  namespace: gluetun
spec:
  type: LoadBalancer
  selector:
    app: gluetun
  ports:
    - name: http-proxy
      port: 8888
      targetPort: http-proxy
      protocol: TCP
