204-k3s-prod/manifests/activepieces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: activepieces

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: activepieces
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: activepieces
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: activepieces
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.7
          imagePullPolicy: IfNotPresent
          command: ["redis-server", "--save", "", "--appendonly", "no"]
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: redis-tmp
              mountPath: /data
      volumes:
        - name: redis-tmp
          emptyDir:
            medium: Memory

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: activepieces
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activepieces
  namespace: activepieces
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activepieces
  template:
    metadata:
      labels:
        app: activepieces
    spec:
      containers:
        - name: activepieces
          image: ghcr.io/activepieces/activepieces:0.78.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: activepieces
  namespace: activepieces
spec:
  selector:
    app: activepieces
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activepieces
  namespace: activepieces
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - flows.home.${BASE_DOMAIN:=example.com}
      secretName: wildcard-home-tls
  rules:
    - host: flows.home.${BASE_DOMAIN:=example.com}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: activepieces
                port:
                  number: 80
