204-k3s-prod/manifests/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.home.${BASE_DOMAIN:=example.com}
      secretName: wildcard-home-tls
  rules:
    - host: prowlarr.home.${BASE_DOMAIN:=example.com}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
