204-k3s-prod/manifests/transmission.yaml
# Inspo: https://nerdiverset.no/k8s-native-sidecar-with-vpn/
apiVersion: v1
kind: Namespace
metadata:
  name: media

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-vpn
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      volumes:
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: synology-media-nfs
          persistentVolumeClaim:
            claimName: synology-media-nfs

      containers:
        - name: curlpod
          image: curlimages/curl:8.18.0
          args:
            - /bin/sh
            - -c
            - while true; do curl -s 4.ident.me; echo; sleep 15; done
          imagePullPolicy: Always

        - name: transmission
          image: linuxserver/transmission:4.1.1
          ports:
            - name: webui
              containerPort: 9091
              protocol: TCP
          volumeMounts:
            - name: transmission-config
              mountPath: /config
            - name: synology-media-nfs
              mountPath: /media
            - name: synology-media-nfs
              mountPath: /downloads
          readinessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - transmission.home.${BASE_DOMAIN:=example.com}
      secretName: wildcard-home-tls
  rules:
    - host: transmission.home.${BASE_DOMAIN:=example.com}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
